# mlops-platform

./: CHANGELOG.md  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt
project-template/: .gitignore  CHANGELOG.md  README.md  azure-pipelines.yml  databricks.yml  pyproject.toml
project-template/conf/: base.yml  dev.yml  hml.yml  prd.yml
project-template/data/sample/: customers_churn.csv
project-template/data/schemas/: customers_churn_schema.json
project-template/notebooks/: 01_exploratory_analysis.py  02_model_experimentation.py
project-template/resources/: batch-inference.job.yml  data-quality.job.yml  eda.job.yml  feature-engineering.job.yml  model-validation.job.yml  monitoring.job.yml  smoke-test.job.yml  training.job.yml
project-template/src/churn_model/: __init__.py  config.py  exceptions.py  logging_config.py  spark.py
project-template/tests/: conftest.py
project-template/tests/integration/: test_artifact_integrity.py  test_bundle_configuration.py  test_champion_challenger_flow.py  test_feature_store_training.py  test_mlflow_tracking.py  test_model_registration.py  test_train_to_inference.py  test_train_to_registry.py
project-template/tests/smoke/: test_production_champion.py
project-template/tests/spark/: test_spark_eda.py  test_spark_pipeline.py  test_spark_read_write.py  test_spark_session.py  test_spark_transformations.py
project-template/tests/unit/: test_champion_challenger.py  test_config.py  test_data_quality.py  test_data_validation.py  test_eda.py  test_evaluate.py  test_feature_store.py  test_features.py  (+6 more)
(+89 files in other folders)
